		Added detection of vpopmail in default installation path.
		Changed language prompts 372, 373, 387, 388, 389, 390 and 438.

	common.a:
		Added 2 functions to return the OS name and CPU family.
		Added a function to return the right tearline.
		Added support for ext3 filesystem in diskspace check.
		Fixed lharc archives return code to LHA.

	mbsetup:
		In message groups added default settings for auto area
		creation.
		Added servicename filemgr to the filemgr services.
		When adding or deleting a message area, several extra checks
		are done. The JAM base is also removed when deleting.
		Layout for message area editor changed, more logical now.
		If selecting a file/mailgroup in node edit that is outside the
		visible range of groups, the view is adjusted.
		If changing the path in an existing file area, the files in
		that area are moved to the new path.
		It is now possible to move file areas.
		It is now possible to move JAM message bases.
		Added edit of external message editor in menu 1.4.
		Added edit of NoPrompt setting in menus for doors.
		Changed edit of message editor in user editor.
		Double noderecords are automatic removed with error logging.
		Corrected screen layout in menu 1.4.11.
		When editing analogue modem lines, the locked portspeed was
		in a lot of cases set to 0.

	mbfido:
		In AreaMgr and FileMgr changed aka matching for area 
		connections. Code cleanups.
		In FileMgr when %tick=on/off command was received, mbfido
		crashed.
		Implemented auto area create comparing a new received echo
		from a uplink which has a echomail taglist in one of the
		mailgroups defined. The area is created with the defaults
		from the mailgroup.
		If mbfido fails to unzip a incoming mailarchive, a second
		attempt is done after a sync() and one second delay. This
		seems to be a kernel flush problem.
		The same goes for adding .pkt files to the outbound, a second
		try is done after a sync() to add the .pkt to the archive.