@@ -4604,6 +4604,9 @@ v0.33.20        10-Feb-2002
 		Added support for ext3 filesystem in diskspace check.
 		Fixed lharc archives return code to LHA.
 
+	clcomm.a
+		Added counter for mailer TCP/IP sessions.
+
 	mbsetup:
 		In message groups added default settings for auto area
 		creation.
@@ -4691,6 +4694,10 @@ v0.33.20        10-Feb-2002
 		mbcico gets the tty to use as option on the commandline.
 		Keeps track of the number of mailers running.
 		Added default path for arealists.
+		Keeps track of total mailer TCP/IP sessions and will not start
+		new sessions if the limit from the setup is reached. This will
+		hopefully prevent that mbcico will use too much bandwidth on
+		TCP/IP trafic.
 
 	mbcico:
 		Fixed binkp driver to accept incoming unprotected sessions.
@@ -4702,6 +4709,7 @@ v0.33.20        10-Feb-2002
 		Disabled creation of .spl files dusing mail sessions for test.
 		Added experimental support for binkp GET command frame, under
 		test now.
+		Registers TCP/IP sessions with mbtask.
 
 	mbout:
 		The status display has now 9 digits for the outbound size.
